k8s/manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1 # How many pods you want to create in this deployment with this particular label
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres # Needs to match "matchLabels"
    spec:
      containers:
      - name: postgres
        image: postgres:11
        ports:
        - containerPort: 5432
--- # Start a new Yaml file/script
apiVersion: v1
kind: Service # Accessible inside the cluster // LoadBalancer type is used if you want to have an external ip
metadata:
  name: postgres-service
spec:
  type: NodePort
  selector: # Tells the service which pods belong to it and which pods he needs to forward the request to.
    app: postgres # This should match the label of the pod.
  ports:
    - port: 5432
